tests/keys/keys.exp
Error ------------------------------------------------------------- keys.js:10:4

Cannot cast `123` to key set because number is incompatible with key set.


Error ------------------------------------------------------------- keys.js:21:4

Cannot cast `123` to key set because number is incompatible with key set.


Error ------------------------------------------------------------- keys.js:26:4

some string with unknown value is incompatible with string literal `hi`.


Error ------------------------------------------------------------- keys.js:28:6

some string with unknown value is incompatible with string literal `hi`.


Error ------------------------------------------------------------- keys.js:31:4

property `bye` is incompatible with string literal `hi`.


Error ------------------------------------------------------------- keys.js:33:4

Cannot cast `123` to key set because number is incompatible with key set.


Error ------------------------------------------------------------- keys.js:38:4

An indexer property is missing in `ObjLit`.


Error ------------------------------------------------------------- keys.js:40:6

An indexer property is missing in `ObjLit`.


Error ------------------------------------------------------------- keys.js:44:4

Cannot cast `123` to key set because number is incompatible with key set.



Found 9 errors
